fix vertical align input

--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -4,9 +4,9 @@
 }
 
 .input-container {
-  height: 55%;
+  height: 50%;
   display: flex;
-  align-items:end;
+  align-items: flex-end;
 }
 
 .calculator input[type="text"] {
@@ -26,6 +26,7 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   width: 100%;
+  max-height: 50%;
   border-top: 2px solid blueviolet;
   padding-top: 10px;
 }
